fix: content height; editor word wrap

--- a/client/src/styles/components/project/_content.scss
+++ b/client/src/styles/components/project/_content.scss
@@ -2,5 +2,5 @@
   display: flex;
 
   width: 100%;
-  height: calc(100vh - 9rem);
+  height: calc(100vh - 9.1rem);
 }
